# bartz

./: .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE  Makefile  README.md  asv.conf.json  how 43033ad  install-r-packages.R  note.txt  pyproject.toml  test_myfunction.py
.asv/: .gitignore
.asv/results/: benchmarks.json
.asv/results/gattocrucco-m1/: 0365fb8b-virtualenv-py3.12.json  1119f48f-virtualenv-py3.13.json  18355650-virtualenv-py3.12.json  20b145b7-virtualenv-py3.12.json  485be21f-virtualenv-py3.12.json  485be21f-virtualenv-py3.13.json  60e1435f-virtualenv-py3.12.json  6f5363ec-virtualenv-py3.12.json  a9eef6f7-virtualenv-py3.12.json  b145bd73-virtualenv-py3.12.json  b145bd73-virtualenv-py3.13.json  c0940a3a-virtualenv-py3.12.json  c0940a3a-virtualenv-py3.13.json  cc0e97c9-virtualenv-py3.12.json  d549d06f-virtualenv-py3.12.json  d549d06f-virtualenv-py3.13.json  machine.json
.github/: dependabot.yml
.github/workflows/: gpu.yml  release.yml  tests.yml
.ipython/: ipython-startup.ipy
_site/: .gitignore  index.html
benchmarks/: __init__.py  benchmarks.py  rmse.py  speed.py
config/: .gitignore  condaenv.yml  pydoclint-baseline.txt  refs-for-asv.py
config/ipython/: .gitignore
config/ipython/profile_default/: ipython_config.py
config/ipython/profile_default/startup/: startup.ipy
docs/: changelog.md  conf.py  development.rst  index.rst  installation.rst  interface.rst  pkglist.md  readme.md  usage.rst
docs/_static/: custom.css
docs/examples/: basic_simdata.ipynb
docs/guide/: index.rst  installation.rst  quickstart.rst
docs/reference/: debug.rst  grove.rst  index.rst  interface.rst  jaxext.rst  mcmcloop.rst  mcmcstep.rst  newinterf.rst  prepcovars.rst  profile.rst
examples/: benchmark-device.py  benchmark-traverse.py  benchmark.py  example.py  example1.py  example2.py  profile.py  runexamples.py  test-parallel.py
examples/rbartpackages/: _base.py  requirements.txt
notebooks/: gputest.ipynb
src/bartz/: BART.py  __init__.py  _interface.py  _profiler.py  bartz.py  debug.py  grove.py  interface.py  jaxext.py  mcmcloop.py  mcmcstep.py  prepcovars.py
src/bartz/jaxext/: __init__.py  _autobatch.py
src/bartz/jaxext/scipy/: __init__.py  special.py  stats.py
src/bartz/mcmcstep/: __init__.py  _moves.py  _state.py  _step.py
tests/: __init__.py  aux_tests.py  conftest.py  test_BART.py  test_debug.py  test_interface.py  test_jaxext.py  test_mcmcloop.py  test_mcmcstep.py  test_meta.py  test_mvbart.py  test_prepcovars.py  test_profiler.py  util.py
tests/rbartpackages/: BART.py  BART3.py  __init__.py  _base.py  bartMachine.py  dbarts.py
